changed overflow-y to auto to fix missing scrollbar

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
     width: 100%;
     height: 300vh;
     margin: 0;
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 .body {
